<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>dbeaver-agent</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>


    <dependencies>
<!--        <dependency>-->
<!--            <groupId>net.bytebuddy</groupId>-->
<!--            <artifactId>byte-buddy</artifactId>-->
<!--            <version>1.12.10</version>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>net.bytebuddy</groupId>-->
<!--            <artifactId>byte-buddy-agent</artifactId>-->
<!--            <version>1.12.10</version>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>org.ow2.asm</groupId>-->
<!--            <artifactId>asm</artifactId>-->
<!--            <version>9.1</version>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>com.dbeaver.ee</groupId>-->
<!--            <artifactId>runtime</artifactId>-->
<!--            <version>2.0.112</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/libs/com.dbeaver.ee.runtime_2.0.112.202206121739.jar</systemPath>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>com.dbeaver.lm</groupId>-->
<!--            <artifactId>core</artifactId>-->
<!--            <version>2.0.112</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/libs/com.dbeaver.lm.core_2.0.112.202206121739.jar</systemPath>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>org.jkiss</groupId>-->
<!--            <artifactId>lm</artifactId>-->
<!--            <version>1.0.136</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/libs/org.jkiss.lm_1.0.136.202206121739.jar</systemPath>-->
<!--        </dependency>-->

<!--        <dependency>-->
<!--            <groupId>org.jkiss</groupId>-->
<!--            <artifactId>utils</artifactId>-->
<!--            <version>2.1.166</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/libs/org.jkiss.utils_2.1.166.202206121739.jar</systemPath>-->
<!--        </dependency>-->


    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>utf-8</encoding>
                    <compilerArgument>-XDignore.symbol.file</compilerArgument>
                    <fork>true</fork>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.0.0</version>

                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                        </manifest>
                        <manifestEntries>
                            <Built-By>anon</Built-By>
<!--                            <Agent-Class>com.github.dbee.DbeeAgent</Agent-Class>-->
                            <Premain-Class>com.github.dbee.DbeeAgent</Premain-Class>
                            <Can-Redefine-Classes>true</Can-Redefine-Classes>
                            <Can-Retransform-Classes>true</Can-Retransform-Classes>
                            <Can-Set-Native-Method-Prefix>true</Can-Set-Native-Method-Prefix>

                        </manifestEntries>
                    </archive>
                    <finalName>dbeaver-agent</finalName>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>

                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>